--- a/index.html
+++ b/index.html
@@ -29,10 +29,83 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <!-- Timeblocks go here hours are 0900 - 1700 -->
+      <div id="nine" class="row time-block">
+        <div class="col-1 bg-light hour">
+          9:00 AM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+
+      <div id="ten" class="row time-block">
+        <div class="col-1 bg-light hour">
+          10:00 AM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+     
+      <div id="eleven" class="row time-block">
+        <div class="col-1 bg-light hour">
+          11:00 AM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+     
+      <div id="twelve" class="row time-block">
+        <div class="col-1 bg-light hour">
+          12:00 PM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+
+      <div id="thirteen" class="row time-block">
+        <div class="col-1 bg-light hour">
+          1:00 PM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+
+      <div id="fourteen" class="row time-block">
+        <div class="col-1 bg-light hour">
+          2:00 PM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+
+      <div id="fifteen" class="row time-block">
+        <div class="col-1 bg-light hour">
+          3:00 PM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+
+      <div id="sixteen" class="row time-block">
+        <div class="col-1 bg-light hour">
+          4:00 PM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+
+      <div id="seventeen" class="row time-block">
+        <div class="col-1 bg-light hour">
+          5:00 PM
+        </div>
+        <textarea class="col-md-10 description"></textarea>
+        <button type="button" class="saveBtn btn-primary">Save</button>
+      </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
