Added reactive clock, started function to check and compare the current hour with the hour block

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <p id="currentTime" class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here hours are 0900 - 1700 -->
-      <div id="nine" class="row time-block">
+      <div id="hourBlock-9" class="row time-block">
         <div class="col-1 bg-light hour">
           9:00 AM
         </div>
@@ -38,7 +38,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
 
-      <div id="ten" class="row time-block">
+      <div id="hourBlock-10" class="row time-block">
         <div class="col-1 bg-light hour">
           10:00 AM
         </div>
@@ -46,7 +46,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
      
-      <div id="eleven" class="row time-block">
+      <div id="hourBlock-11" class="row time-block">
         <div class="col-1 bg-light hour">
           11:00 AM
         </div>
@@ -54,7 +54,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
      
-      <div id="twelve" class="row time-block">
+      <div id="hourBlock-12" class="row time-block">
         <div class="col-1 bg-light hour">
           12:00 PM
         </div>
@@ -62,7 +62,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
 
-      <div id="thirteen" class="row time-block">
+      <div id="hourBlock-13" class="row time-block">
         <div class="col-1 bg-light hour">
           1:00 PM
         </div>
@@ -70,7 +70,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
 
-      <div id="fourteen" class="row time-block">
+      <div id=hourBlock-14" class="row time-block">
         <div class="col-1 bg-light hour">
           2:00 PM
         </div>
@@ -78,7 +78,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
 
-      <div id="fifteen" class="row time-block">
+      <div id="hourBlock-15" class="row time-block">
         <div class="col-1 bg-light hour">
           3:00 PM
         </div>
@@ -86,7 +86,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
 
-      <div id="sixteen" class="row time-block">
+      <div id="hourBlock-16" class="row time-block">
         <div class="col-1 bg-light hour">
           4:00 PM
         </div>
@@ -94,7 +94,7 @@
         <button type="button" class="saveBtn btn-primary">Save</button>
       </div>
 
-      <div id="seventeen" class="row time-block">
+      <div id="hourBlock-17" class="row time-block">
         <div class="col-1 bg-light hour">
           5:00 PM
         </div>
